--- a/BJ.App/Views/Home/TermOfUse.cshtml
+++ b/BJ.App/Views/Home/TermOfUse.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     var culture = CultureInfo.CurrentCulture.Name;
-
+    ViewBag.Title = "TERMS OF USE";
 }
 @section Styles {
     <link rel="stylesheet" href="~/BoostJuice/css/healthy.css">
