--- a/BJ.App/Views/Shared/_Layout.cshtml
+++ b/BJ.App/Views/Shared/_Layout.cshtml
@@ -363,9 +363,7 @@
     </script>
 
 
-    <div class="zalo-chat-widget" data-oaid="4575834268601353901" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height=""></div>
 
-    <script src="https://sp.zalo.me/plugins/sdk.js"></script>
 
     <header class="boost-main"> 
         <nav class="boost-main-nav-wrapper"> 
@@ -533,7 +531,9 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11004042599"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-11004042599');</script>
+    <div class="zalo-chat-widget" data-oaid="4575834268601353901" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height=""></div>
 
+    <script async defer src="https://sp.zalo.me/plugins/sdk.js"></script>
 
     @await Component.InvokeAsync("Notyf")
     @RenderSection("Scripts", required: false)
