--- a/BJ.Admin/Views/Shared/_Layout.cshtml
+++ b/BJ.Admin/Views/Shared/_Layout.cshtml
@@ -45,13 +45,13 @@
             <!-- Header START -->
             <div class="header">
                 <div class="logo logo-dark">
-                    <a href="index.html">
+                    <a href="./">
                         <img src="~/assets/images/logo/boost-juice-logo.png" width="50%" height="50%" alt="Logo">
                         <img class="logo-fold" src="~/assets/images/logo/cropped-iconboostweb-270x270.png" width="85%" height="85%" alt="Logo">
                     </a>
                 </div>
                 <div class="logo logo-white">
-                    <a href="index.html">
+                    <a href="./">
                         <img src="~/assets/images/logo/boost-juice-logo.png" width="50%" height="50%" alt="Logo">
                         <img class="logo-fold" src="~/assets/images/logo/cropped-iconboostweb-270x270.png" width="85%" height="85%" alt="Logo">
                     </a>
@@ -194,7 +194,15 @@
                                 </li>                            }
                            
                         }
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle" href="/thong-tin-tai-khoan" style="cursor:pointer">
+                                <span class="icon-holder">
+                                    <i class="anticon anticon-lock"></i>
+                                </span>
+                                <span class="title">Cài đặt tài khoản</span>
 
+                            </a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle" id="logout" style="cursor:pointer">
                                 <span class="icon-holder">
